Links working and login page

--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     Lets gooo!!!
     <p>Hello</p>
-    <button> Click me!</button>
+    <button>Click me!</button>
     <b> BOld lIne</b>
-</body>
+    <div>
+      <b> Help!</b>
+      <p>
+        <i>Lorem ipsum</i>, dolor sit amet consectetur adipisicing elit. Cum aut
+        porro minima molestiae quos accusamus ullam, quae excepturi repellat id
+        fugiat numquam nulla sapiente ipsam non cumque laborum provident eum!
+      </p>
+    </div>
+    <a href="https://discord.gg/frontend" target="_blank">Discord Server</a>
+    <div>
+      <a href="https://get.goautoinsurance.com" target="_blank">Go Auto</a>
+    </div>
+    IT worked
+    <div>
+      <a href="/test/dashboard.html" target="_blank">To the Dashboard</a>
+    </div>
+    <a href="/login.html" target="_blank">Login</a>
+  </body>
 </html>
